新增 artifactId: buession-beans 提供 bean 工具类