@@ -26,33 +26,34 @@
  */
 package com.buession.beans.converters;
 
+import java.net.URI;
 import java.net.URL;
 
 /**
- * {@link com.buession.beans.converters.Converter} 的 URL 对象的实现，处理 <b>{@link java.net.URL}</b> 对象之间的转换的实现。
+ * {@link com.buession.beans.converters.Converter} 的 URL 对象的实现，处理 <b>{@link java.net.URI}</b> 对象之间的转换的实现。
  *
  * @author Yong.Teng
  * @since 1.2.0
  */
-public class URLConverter extends AbstractConverter<URL> {
+public class URIConverter extends AbstractConverter<URI> {
 
-	public URLConverter(){
+	public URIConverter(){
 		super();
 	}
 
-	public URLConverter(URL defaultValue){
+	public URIConverter(URI defaultValue){
 		super(defaultValue);
 	}
 
 	@Override
-	public Class<URL> getType(){
-		return URL.class;
+	public Class<URI> getType(){
+		return URI.class;
 	}
 
 	@Override
-	protected URL convertToType(final Class<URL> type, final Object value) throws Throwable{
-		if(URL.class.equals(type)){
-			return type.cast(new URL(value.toString()));
+	protected URI convertToType(final Class<URI> type, final Object value) throws Throwable{
+		if(URI.class.equals(type)){
+			return type.cast(new URI(value.toString()));
 		}
 
 		throw conversionException(type, value);
